# office365-service

./: pyproject.toml
.github/workflows/: tag-version.yml
scripts/: install.sh
src/office365_service/: __init__.py  sharepoint_service.py
