[project]
name = "office365-service"
version = "0.2.5"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dev4Mod", email = "wellingtonmods@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "hatchling>=1.27.0",
    "office365-rest-python-client>=2.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
office365-rest-python-client = { git = "https://github.com/Dev4Mod/office365-rest-python-client.git" }
